# ChangeLog for app-accessibility/orca
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/orca/ChangeLog,v 1.127 2014/03/09 11:52:54 pacho Exp $

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> orca-3.10.2.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> orca-3.10.2.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> orca-3.10.2.ebuild:
  Fix wrong commit, bug 502160

*orca-3.10.2 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +orca-3.10.2.ebuild,
  -orca-3.6.3-r1.ebuild, -orca-3.8.1.ebuild:
  Version bump for Gnome 3.10, drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> orca-3.8.2.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> orca-3.8.2.ebuild:
  amd64 stable, bug #478252

*orca-3.8.2 (02 Aug 2013)

  02 Aug 2013; Gilles Dartiguelongue <eva@gentoo.org> +orca-3.8.2.ebuild:
  Version bump.

  08 Jun 2013; Zac Medico <zmedico@gentoo.org> orca-3.6.3-r1.ebuild,
  orca-3.8.1.ebuild:
  REQUIRED_USE="${PYTHON_REQUIRED_USE}", as intended by python-r1.eclass.

*orca-3.8.1 (14 May 2013)

  14 May 2013; Gilles Dartiguelongue <eva@gentoo.org> orca-3.6.3-r1.ebuild,
  +orca-3.8.1.ebuild:
  Version bump for Gnome 3.8. Add missing python USE dependencies.

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -orca-3.4.2.ebuild:
  Clean up old revision.

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org> orca-3.6.3-r1.ebuild:
  Move Creative Commons licenses to shorter names.

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> orca-3.6.3-r1.ebuild:
  Add ~arm, wrt bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> orca-3.6.3-r1.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> orca-3.6.3-r1.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> orca-3.6.3-r1.ebuild:
  Add ~ia64, wrt bug #449220
